10.8.7 (ws)
      - implemented drumset editor
9.8.7 (ws)
      - added "rehearsal mark" text type & style
      - cleanups for cmd handling
8.8.7
      - extend list view for Measure() and Slur()
      - added new command to insert n measures (Dieter Krause)
7.8.7 (ws)
      - fix regression setting irregular measures
6.8.7 (ws)
      - implement: drag bar line to measure
      - new key accelerator for insert measure: "Insert"
5.8.7  (ws)
      - enhanced accidental layout
      - another try to center whole measure rests
4.8.7  (ws)
      - give warning if no note/rest is selected when
        trying to add tempo
      - fix tempo text layout
      - tempo menu: implement double click for list
      - better note head positioning in chords
3.8.7  (ws)
      - implemented measure insert/delete
31.7.7 (ws)
      - Note entry mode was not working in 0.6.1 :-(

      ======== Version 0.6.1 released =============
30.7.7 (ws)
      - Every Score() class now has its own Style(). This fixes
        several bugs when there are more than one scores loaded.
      - In chord name edit mode "space" moves to the next chord,
        "shift+space" moves to the previous chord similar to
        lyrics edit mode.
      - new shortcut for entering chord names: Ctrl+K
      - fix layout bugs after printing lyrics
      - change lyrics commands (lyrics edit mode):
            space       - go to next note
            shift+space - go to previous note
            ctrl+space  - enter space in lyric
            ctrl+"-"    - enter "-"
            -           - go to next note and connect with "-"
        The previous used "tab" key is not available and used
        for widget focus navigation etc.

29.7.7 (ws)
      - implement clipboard paste for text edit mode
28.7.7 (ws)
      - implement selections for text edit
      - decorate text in edit mode with a frame
26.7.7 (ws)
      - fix regression on midi import
      - moved Element edit state to Viewer class; this avoids problems