@@ -1,4 +1,5 @@
 10.8.7 (ws)
+      - add notehead palette
       - implemented drumset editor
 9.8.7 (ws)
       - added "rehearsal mark" text type & style
